--- a/LMSGroupOne/Views/_ViewImports.cshtml
+++ b/LMSGroupOne/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using LMSGroupOne
 @using LMSGroupOne.Models
+@using LMS.Core.Models.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
