--- a/LMSGroupOne/Views/MainNavigation/Index.cshtml
+++ b/LMSGroupOne/Views/MainNavigation/Index.cshtml
@@ -9,7 +9,7 @@
 </div>
 
 
-<nobr id="dragText" style="top:0px; left:0px; width:00px; height:0px; position:absolute; background-color:#ffff0055; z-index:100;">hello world</nobr>
+@*<nobr id="dragText" style="top:0px; left:0px; width:00px; height:0px; position:absolute; background-color:#ffff0055; z-index:100;">hello world</nobr>*@
 
 <div class="container-fluid">
     <div class="row">
