--- a/LMSGroupOne/Views/MainNavigation/_TreeViewPartial.cshtml
+++ b/LMSGroupOne/Views/MainNavigation/_TreeViewPartial.cshtml
@@ -3,10 +3,13 @@
 
 
 
-
+<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 
 <div id="menuDivId" style="background-color:aqua;">
+    <div>
+        <i class="fa fa-trash-alt" style ="font-size:48px;color:black; padding:4px;"></i>        
 
+    </div>
     
 
     <ul class="list-group" style="user-select: none;">
@@ -20,13 +23,16 @@
 
 </div>
 
-<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+
 
 <style>
     treeItem {
     }
 
     carretIcon {
+    }
+
+    folderIcon {
     }
 </style>
 
@@ -82,7 +88,7 @@
                         
                         break;
                     case NodeType.folder:
-                        <i id="@node.Id" data-item-type="@node.Type" data-item-extra="icon" data-item-parent-type="@parentNode.Type" class="fas fa-folder" style="color:lightgoldenrodyellow"></i>
+                        <i id="@node.Id" data-item-type="@node.Type" data-item-extra="icon" data-item-parent-type="@parentNode.Type" class="folderIcon fas fa-folder" style="color:lightgoldenrodyellow"></i>
                         TreeName(node, parentNode);
                         TreeEditableNew(node, parentNode);
                         break;
@@ -159,23 +165,24 @@
         #pressTimer;
 
         #selectBar;
-        #selectSelection;
-        //#dragText;
+        #selectSelection;        
 
         #menuDiv;
 
+        #currentElement;
+        #editTimer;
+        #editCancel;
+
         constructor(menuDivId)
-        {
-            //this.#dragElement = document.getElementById("dragText");
+        {            
             this.#pressPositionX = 0;
             this.#pressPositionY = 0;
             this.#initialMove = false;
             this.#draging = false;
             this.#longPress = false;
+            this.#editCancel = false;
 
-
-            console.log("init tree");
-
+            
             window.addEventListener("mouseup", (event)=>this.#OnMouseUp(event));
             window.addEventListener("mousemove", (event)=>this.#OnMouseMove(event));
 
@@ -183,38 +190,29 @@
             let t = document.getElementsByClassName("treeItem");
             for (let i = 0; i < t.length; i++)
             {
-                t[i].addEventListener("click", (event)=>this.#OnClick(event));
+                t[i].addEventListener("click", (event) => this.#OnClick(event));
+                t[i].addEventListener("dblclick", (event)=> this.#OnDblClick(event))
                 t[i].addEventListener("mousedown", (event)=>this.#OnDown(event));
             }
 
 
-            //this.#selectBar = document.getElementById("selectBar");
-            //this.#selectSelection = document.getElementById("selectSelection");
+            
 
             this.#menuDiv = document.getElementById(menuDivId);
 
-
+            // the selection
             this.#selectBar = document.createElement("div");
             this.#selectSelection = document.createElement("div");
             this.#menuDiv.prepend(this.#selectBar);
             this.#menuDiv.prepend(this.#selectSelection);
-            this.#selectBar.style = "top:0px; left:0px; width:100%; height:32px; position:absolute; background-color:#ffff0055;";
-            this.#selectSelection.style ="top:0px;left:0px;width:100%;height:32px;position:absolute;background-color:#ff000033;";
+            this.#selectBar.style = "top:-4096px; left:0px; width:100%; height:32px; position:absolute; background-color:#ffff0055;";
+            this.#selectSelection.style ="top:-4096px;left:0px;width:100%;height:32px;position:absolute;background-color:#ff000033;";
 
-
+            // the draggable element
             this.#dragElement = document.createElement("nobr");
             document.body.append(this.#dragElement);
-            this.#dragElement.style = "top:0px; left:0px; width:00px; height:0px; position:absolute; background-color:#ffff0055; z-index:100;";
-            
-            //this.#selectBar.outerHTML = '<div id="selectBar" style="top:0px; left:0px; width:100%; height:32px; position:absolute; background-color:#ffff0055;"></div>';
-
-
-            //<div id="selectBar" style="top:0px; left:0px; width:100%; height:32px; position:absolute; background-color:#ffff0055;"></div>
-
-            //<div id="selectSelection" style="top:0px; left:0px; width:100%; height:32px; position:absolute; background-color:#ff000033;"></div>
-
-
-            //<nobr id="dragText" style="top:0px; left:0px; width:00px; height:0px; position:absolute; background-color:#ffff0055; z-index:100;">hello world</nobr>
+            this.#dragElement.style = "top:-4096px; left:0px; width:00px; height:0px; position:absolute; background-color:#ffff0055; z-index:100;";
+                       
 
         }
 
@@ -275,25 +273,108 @@
             console.log("type:" + event.target.dataset.itemExtra);
             console.log("ypos:" + event.clientY);
 
-            if (event.target.dataset.itemExtra == "text") {
-                let children = event.target.parentNode.parentNode.childNodes;
-                children.forEach(s => { s.hidden = !s.hidden; });
-                event.target.parentNode.hidden = false;
+            if (event.target.dataset.itemExtra == "caret")
+            {
+                               
+                console.log("current element " + this.#currentElement.dataset.itemType);
+
+                this.#ToggleExpand(event.target.parentNode);
+                this.#SelectionOutline(event.target.parentNode);
+                return;
             }
 
-            if (event.target.dataset.itemExtra == "delete") {
-                this.#OnDelete(event);
+            if (event.target.dataset.itemExtra == "text")
+            {
+                // new current
+                if (this.#currentElement == event.target.parentNode)
+                {                    
+                    this.#editCancel = false;
+                    this.#editTimer = window.setTimeout(() =>
+                    {
+                        if (!this.#editCancel)
+                        {
+                            
+                            event.target.contentEditable = true;
+                            event.target.focus();                            
+                        }                        
+                        
+                    }, 500);
+
+
+
+
+
+                    //this.#currentElement = event.target.parentNode;
+                }
+
+
+                this.#SelectionOutline(event.target.parentNode);
+                return;
             }
 
-            if (event.target.dataset.itemExtra == "new") {
-                this.#OnNew(event);
+            if (event.target.dataset.itemExtra == "new")
+            {
+                console.log("adding something");
+            }
+
+            
+           
+        }
+
+      
+        #OnDblClick(event)
+        {
+            this.#editCancel= true;
+
+            console.log("dubbeltrubbel");
+            this.#ToggleExpand(event.target.parentNode);
+
+            this.#SelectionOutline(event.target.parentNode);
+        }
+
+         
+        #ToggleExpand(node)
+        {
+            let children = node.parentNode.childNodes;
+            children.forEach(s => { s.hidden = !s.hidden; });
+            node.hidden = false;
+
+
+            let carret = node.childNodes[1];
+            if (carret.classList.contains("carretIcon"))
+            {
+                carret.classList.toggle("fa-caret-right");
+                carret.classList.toggle("fa-caret-down");
+            }
+
+            let icon = node.childNodes[3];
+            if (icon.classList.contains("folderIcon"))
+            {
+                icon.classList.toggle("fa-folder");
+                icon.classList.toggle("fa-folder-open");
+            }
+
+            console.log(icon.classList);
+
+            
+
+
+            
+
+        }
+
+        #SelectionOutline(node)
+        {
+            // new current
+            if (this.#currentElement != node)
+            {
+                console.log("new current");
+                this.#currentElement = node;
             }
 
 
-
-            // selection bar
-            let rect = event.target.parentNode.getBoundingClientRect();
-            let rect2 = event.target.parentNode.parentNode.getBoundingClientRect();
+            let rect = node.getBoundingClientRect();
+            let rect2 = node.parentNode.getBoundingClientRect();
             let mr = this.#menuDiv.getBoundingClientRect();
 
             let marginal = rect.top - rect2.top;
@@ -303,12 +384,7 @@
 
             this.#selectSelection.style.top = (rect.top - mr.top) + "px";
             this.#selectSelection.style.height = (rect2.height - marginal * 2) + "px";
-
         }
-
-
-
-
 
         #OnDelete(event)
         {
@@ -328,8 +404,9 @@
             this.#pressPositionY = event.clientY;
             console.log("on down:" + event.clientY);
 
-            this.#longPress = false; //longpress is false initially
-            this.#pressTimer = window.setTimeout(() => {
+            this.#longPress = false; 
+            this.#pressTimer = window.setTimeout(() =>
+            {
                 // your code here
                 console.log("timer");
                 this.#dragElement.innerHTML = event.target.parentNode.innerHTML;
@@ -361,194 +438,7 @@
 
 
 
-    //let dragElement = document.getElementById("dragText");
-
-    //let pressPositionX = 0;
-    //let pressPositionY = 0;
-    //let initialMove = false;
-    //let draging = false;
-
-    //let longpress = false;
-    //window.addEventListener('mouseup', function (event) {
-        
-    //    clearTimeout(pressTimer);
-    //    longpress = false;
-    //    initialMove = false;
-    //    draging = false;
-
-    //    dragElement.style.top = -4096+"px";
-
-    //    let e = document.elementFromPoint(event.clientX, event.clientY);
-    //    console.log("dragged to>>" + e.id + ": " + e.dataset.itemType);
-    //    console.log("belongs to parent" + e.dataset.itemParentId + ": " + e.dataset.itemParentType);
-        
-    //})
-
-    //window.addEventListener('mousemove', function (event) {
-
-    //    if (longpress) {
-
-    //        if (!initialMove) {
-    //            dist = (event.clientX - pressPositionX) * (event.clientX - pressPositionX) + (event.clientY - pressPositionY) * (event.clientY - pressPositionY);
-    //            if (dist < 50) {
-    //                //longpress = false;
-    //                draging = true;
-    //            }
-    //            initialMove = true;
-    //        }
-
-    //        //console.log("distance:" + dist);
-            
-    //    }
-    //    if (draging) {
-    //        dragElement.style.top = event.pageY+"px";
-    //        dragElement.style.left = event.pageX + "px";
-
-    //        let e = document.elementFromPoint(event.clientX - 5, event.clientY - 5);
-    //        //console.log("mosemove-" + e.id + ": " + e.dataset.itemType);
-            
-    //    }
-
-
-    //    // do logic here
-    //})
-
-
-
-    //let t = document.getElementsByClassName("treeItem");
-    //for (let i = 0; i < t.length; i++) {
-    //    t[i].addEventListener("click", OnClick);
-
-    //    t[i].addEventListener("mousedown", OnDown);
-
-    //    //t[i].addEventListener("dblclick", OnDblClick);
-    //}
-
-
-
-    function OnDblClick(event) {
-        console.log("dubbel click");
-        console.log("id:" + event.target.id);
-        console.log("type:" + event.target.dataset.itemType);
-
-
-        let children = event.target.parentNode.parentNode.childNodes;
-
-        let carret = event.target.childNodes[1];
-        if (carret.classList.contains("carretIcon")) {
-            carret.classList.toggle("fa-caret-right");
-            carret.classList.toggle("fa-caret-down");
-        }
-
-        children.forEach(s => { s.hidden = !s.hidden; });
-        //event.target.parentNode.hidden = false;
-    }
-
-
-
-
-    function OnClick(event) {
-
-        if (longpress)
-        {
-            return;
-        }
-
-        console.log("enkel click");
-        console.log("id:" + event.target.id);
-        console.log("type:" + event.target.dataset.itemType);
-        console.log("type:" + event.target.dataset.itemExtra);
-        console.log("ypos:" + event.clientY);
-
-        if (event.target.dataset.itemExtra == "text")
-        {
-            let children = event.target.parentNode.parentNode.childNodes;
-            children.forEach(s => { s.hidden = !s.hidden; });
-            event.target.parentNode.hidden = false;
-        }
-
-        if (event.target.dataset.itemExtra == "delete")
-        {
-            OnDelete(event);
-        }
-
-        if (event.target.dataset.itemExtra == "new") {
-            OnNew(event);
-        }
-
-
-
-
-        //for (i = 2; i < childnodes.length; i++) {
-        //    children[i].hidden = !children[i].hidden;
-        //    event.target.hidden = false;
-        //}
-
-        
-
-
-
-        //let rect = event.target.getBoundingClientRect();
-        //let mr = document.getElementById("menuDivId").getBoundingClientRect();
-
-        //document.getElementById("selectBar").style.top = (rect.top - mr.top) + "px";
-        //document.getElementById("selectBar").style.height = (rect.height) + "px";
-
-        //$.ajax({
-        //    type: "GET",
-        //    url: "/Home/OnTreeClick",
-        //    data: { id: event.target.id, type: event.target.dataset.itemType },
-        //    cache: false,
-        //    success: result => {
-
-        //        if (result) {
-        //            document.getElementById("contentDivId").innerHTML = result;
-        //        }
-
-        //    }
-
-        //});
-
-
-
-
-
-
-
-    }
-
-
-
-
-    function OnDelete(event)
-    {
-        console.log("delete id:" + event.target.id);
-    }
-
-    function OnNew(event)
-    {
-        console.log("new entity id:" + event.target.id + "can create " + event.target.dataset.itemCreates);
-        console.log("belongs to id:" + event.target.dataset.itemParentId + " of type " + event.target.dataset.itemParentType);
-    }
-
-
-    function OnDown(event)
-    {
-        pressPositionX = event.clientX;
-        pressPositionY = event.clientY;
-        console.log("on down:" + event.clientY);
-
-        longpress = false; //longpress is false initially
-        pressTimer = window.setTimeout(function () {
-            // your code here
-            console.log("timer");
-            dragElement.innerHTML = event.target.parentNode.innerHTML;
-            dragElement.id = event.target.id;
-            dragElement.dataset.itemType = event.target.dataset.itemType;
-            longpress = true; //if run hold function, longpress is true
-        }, 100)
-    }
-
+    
     
 
 
