Create Course View

--- a/LMSGroupOne/Views/_ViewImports.cshtml
+++ b/LMSGroupOne/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using LMSGroupOne
 @using LMSGroupOne.Models
 @using LMS.Core.Models.Entities 
+@using LMS.Core.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
