--- a/LMSGroupOne/Views/MainNavigation/_TreeViewPartial.cshtml
+++ b/LMSGroupOne/Views/MainNavigation/_TreeViewPartial.cshtml
@@ -7,7 +7,7 @@
 
 <div id="menuDivId" style="background-color:aqua;">
     <div>
-        <i class="fa fa-trash-alt" style ="font-size:48px;color:black; padding:4px;"></i>        
+        <i id="trashCanId" class="fa fa-trash-alt" data-item-type="@NodeType.trash" style ="font-size:48px;color:black; padding:4px;"></i>        
 
     </div>
     
@@ -152,7 +152,52 @@
 
 <script>
 
-    
+    class TreeItemGenerator
+    {
+        static GenerateTeacher(id, type, parentId, parentType, name)
+        {
+            let item = document.createElement("nobr");
+            item.classList = "treeItem";
+
+            //let icon = '<i id="4" data-item-type="teacher" data-item-extra="icon" class="fas fa-user-graduate" style="color:black;"></i>';
+
+            let icon = document.createElement("i");
+            icon.id = id;
+            icon.dataset.itemType = type;
+            icon.dataset.itemExtra = "icon";
+            icon.classList = "fas fa-user-graduate";
+            icon.style = "color:black;";
+
+            //let text = '<span contenteditable="false" id="4" data-item-type="teacher" data-item-extra="text" data-item-parent-id="202" data-item-parent-type="folder" style="display: inline-block; page-break-inside:avoid;">björne</span>';
+
+            let text = document.createElement("span");
+            text.innerHTML = name;
+            text.id = id;
+            text.contentEditable = false;
+            text.dataset.itemType = type;
+            text.dataset.itemExtra = "text";
+            text.dataset.itemParentId = parentId;
+            text.dataset.itemParentType = parentType;
+
+
+            //item.appendChild(text);
+            item.innerHTML = icon.outerHTML + text.outerHTML;
+
+
+            return item;
+        }
+
+    }
+
+
+
+
+
+
+
+
+
+
 
     class TreeHandler
     {
@@ -165,7 +210,7 @@
         #pressTimer;
 
         #selectBar;
-        #selectSelection;        
+        #selectSelection;
 
         #menuDiv;
 
@@ -173,8 +218,13 @@
         #editTimer;
         #editCancel;
 
-        constructor(menuDivId)
-        {            
+        #thrashCan;
+        #movedElement;
+
+        #contentDiv;
+
+        constructor(menuDivId, contentDivId, thrashCanId)
+        {
             this.#pressPositionX = 0;
             this.#pressPositionY = 0;
             this.#initialMove = false;
@@ -182,7 +232,7 @@
             this.#longPress = false;
             this.#editCancel = false;
 
-            
+
             window.addEventListener("mouseup", (event)=>this.#OnMouseUp(event));
             window.addEventListener("mousemove", (event)=>this.#OnMouseMove(event));
 
@@ -196,7 +246,7 @@
             }
 
 
-            
+
 
             this.#menuDiv = document.getElementById(menuDivId);
 
@@ -212,22 +262,51 @@
             this.#dragElement = document.createElement("nobr");
             document.body.append(this.#dragElement);
             this.#dragElement.style = "top:-4096px; left:0px; width:00px; height:0px; position:absolute; background-color:#ffff0055; z-index:100;";
-                       
 
+
+            this.#thrashCan = document.getElementById(thrashCanId);
+
+            this.#contentDiv = document.getElementById(contentDivId);
         }
 
         #OnMouseUp(event)
         {
+
+
+            this.#dragElement.style.top = -4096 + "px";
+            let e = document.elementFromPoint(event.clientX, event.clientY);
+            console.log("dragged to>>" + e.id + ": " + e.dataset.itemType);
+            console.log("belongs to parent" + e.dataset.itemParentId + ": " + e.dataset.itemParentType);
+
+            if (this.#draging)
+            {
+                if (e.dataset.itemType == "trash")
+                {
+                    clearTimeout(this.#pressTimer);
+                    this.#longPress = false;
+                    this.#initialMove = false;
+                    this.#draging = false;
+
+
+                    this.#OnDelete(event);
+                    //return;
+                }
+            }
+
+
             clearTimeout(this.#pressTimer);
             this.#longPress = false;
             this.#initialMove = false;
             this.#draging = false;
 
-            this.#dragElement.style.top = -4096 + "px";
 
-            let e = document.elementFromPoint(event.clientX, event.clientY);
-            console.log("dragged to>>" + e.id + ": " + e.dataset.itemType);
-            console.log("belongs to parent" + e.dataset.itemParentId + ": " + e.dataset.itemParentType);
+
+
+
+
+            // dragged to
+
+
         }
 
         #OnMouseMove(event)
@@ -246,11 +325,12 @@
                 //console.log("distance:" + dist);
 
             }
-            if (this.#draging) {
+            if (this.#draging)
+            {
                 this.#dragElement.style.top = event.pageY + "px";
                 this.#dragElement.style.left = event.pageX + "px";
 
-                let e = document.elementFromPoint(event.clientX - 5, event.clientY - 5);
+                let e = document.elementFromPoint(event.clientX, event.clientY);
                 //console.log("mosemove-" + e.id + ": " + e.dataset.itemType);
 
             }
@@ -273,9 +353,34 @@
             console.log("type:" + event.target.dataset.itemExtra);
             console.log("ypos:" + event.clientY);
 
+
+            // todo filtera bort folder och dubbelaktivering
+            $.ajax({
+                type: "GET",
+                url: "/MainNavigation/OnTreeClick",
+                data: { id: event.target.id, type: event.target.dataset.itemType },
+                cache: false,
+                success: result =>
+                {
+                    console.log(result);
+                    //this.#contentDiv.innerHTML = result;
+                    document.getElementById("contentDivId").innerHTML = result;
+                }
+            });
+
+
+
+
+
+
+
+
+
+
+
             if (event.target.dataset.itemExtra == "caret")
             {
-                               
+
                 console.log("current element " + this.#currentElement.dataset.itemType);
 
                 this.#ToggleExpand(event.target.parentNode);
@@ -287,17 +392,17 @@
             {
                 // new current
                 if (this.#currentElement == event.target.parentNode)
-                {                    
+                {
                     this.#editCancel = false;
                     this.#editTimer = window.setTimeout(() =>
                     {
                         if (!this.#editCancel)
                         {
-                            
+
                             event.target.contentEditable = true;
-                            event.target.focus();                            
-                        }                        
-                        
+                            event.target.focus();
+                        }
+
                     }, 500);
 
 
@@ -314,30 +419,38 @@
 
             if (event.target.dataset.itemExtra == "new")
             {
+
                 console.log("adding something");
+                this.#OnNew(event);
             }
 
+
             
-           
+
         }
 
-      
+
         #OnDblClick(event)
         {
             this.#editCancel= true;
 
             console.log("dubbeltrubbel");
-            this.#ToggleExpand(event.target.parentNode);
-
-            this.#SelectionOutline(event.target.parentNode);
+            console.log("childCount" + event.target.parentNode.parentNode.childElementCount);
+            if (event.target.parentNode.parentNode.childElementCount > 1)
+            {
+                this.#ToggleExpand(event.target.parentNode);
+                this.#SelectionOutline(event.target.parentNode);
+            }
         }
 
-         
+
         #ToggleExpand(node)
         {
             let children = node.parentNode.childNodes;
             children.forEach(s => { s.hidden = !s.hidden; });
             node.hidden = false;
+
+
 
 
             let carret = node.childNodes[1];
@@ -356,10 +469,21 @@
 
             console.log(icon.classList);
 
-            
 
 
-            
+            console.log("number of children " + node.parentNode.childElementCount);
+            if (node.parentNode.childElementCount <= 1)
+            {
+                children.forEach(s => { s.hidden = true; });
+                node.hidden = false;
+                carret.hidden = true;
+                icon.classList.add("fa-folder");
+                icon.classList.remove("fa-folder-open");
+
+            }
+
+
+
 
         }
 
@@ -386,16 +510,9 @@
             this.#selectSelection.style.height = (rect2.height - marginal * 2) + "px";
         }
 
-        #OnDelete(event)
-        {
-            console.log("delete id:" + event.target.id);
-        }
 
-        #OnNew(event)
-        {
-            console.log("new entity id:" + event.target.id + "can create " + event.target.dataset.itemCreates);
-            console.log("belongs to id:" + event.target.dataset.itemParentId + " of type " + event.target.dataset.itemParentType);
-        }
+
+
 
 
         #OnDown(event)
@@ -404,7 +521,7 @@
             this.#pressPositionY = event.clientY;
             console.log("on down:" + event.clientY);
 
-            this.#longPress = false; 
+            this.#longPress = false;
             this.#pressTimer = window.setTimeout(() =>
             {
                 // your code here
@@ -412,19 +529,175 @@
                 this.#dragElement.innerHTML = event.target.parentNode.innerHTML;
                 this.#dragElement.id = event.target.id;
                 this.#dragElement.dataset.itemType = event.target.dataset.itemType;
+
+                this.#movedElement = event.target.parentNode.parentNode.parentNode;
+
                 this.#longPress = true; //if run hold function, longpress is true
+
+
             }, 100);
         }
 
 
+        #OnDelete()
+        {
+            console.log("delete-----------------")
+            console.log("item id" + this.#dragElement.id);
+            console.log("item type" + this.#dragElement.dataset.itemType);
 
+            $.ajax({
+                type: "GET",
+                url: "/MainNavigation/OnDelete",
+                data: { id: this.#dragElement.id, type: this.#dragElement.dataset.itemType },
+                cache: false,
+                success: result =>
+                {
+                    let obj = JSON.parse(result);
+                    console.log(obj.success);
+                    if (obj.success)
+                    {
+
+                        this.#removeElement(this.#movedElement);
+                    }
+
+
+                }
+            });
+
+
+        }
+
+        #removeElement(element)
+        {
+            let pNode = element.parentNode;
+
+            element.remove();
+
+
+            if (pNode.childElementCount <= 1)
+            {
+                this.#ToggleExpand(pNode.childNodes[1])
+            }
+
+
+
+            // selections todo refactor
+            let rect = pNode.childNodes[1].getBoundingClientRect();
+            let rect2 = pNode.parentNode.childNodes[1].getBoundingClientRect();
+            let mr = this.#menuDiv.getBoundingClientRect();
+
+            let marginal = rect.top - rect2.top;
+
+            this.#selectBar.style.top = (rect.top - mr.top) + "px";
+            this.#selectBar.style.height = (rect.height) + "px";
+
+            this.#selectSelection.style.top = (rect.top - mr.top) + "px";
+            this.#selectSelection.style.height = (rect2.height - marginal * 2) + "px";
+
+
+
+
+
+        }
+
+
+
+        #OnNew(event)
+        {
+            console.log("new---------------------------")
+            console.log("new entity id:" + event.target.id + "can create " + event.target.dataset.itemCreates);
+            console.log("belongs to id:" + event.target.dataset.itemParentId + " of type " + event.target.dataset.itemParentType);
+
+            $.ajax({
+                type: "GET",
+                url: "/MainNavigation/OnNew",
+                data: { id: event.target.dataset.itemParentId, type: event.target.dataset.itemCreates },
+                cache: false,
+                success: result => {
+                    let obj = JSON.parse(result);
+                    console.log(obj.success);
+                    if (obj.success)
+                    {
+
+                        // todo add element
+                        this.#AddElement(event, obj.id, obj.type, obj.parentId, obj.parentType, obj.name);
+                    }
+                    //string parentId, string parentType
+
+                }
+            });
+        }
+
+        #AddElement(event, id, type, parentId, parentType, name)
+        {
+            let listGroup = document.createElement("ul");
+            listGroup.classList = "list-group";
+
+
+            let listItem = document.createElement("li");
+            listItem.classList = "list-group-item";
+            listItem.style = "background:none;";
+
+            let item = TreeItemGenerator.GenerateTeacher(id, type, parentId, parentType, name);
+
+            //GenerateTeacher(id, type, parentId, parentType, name)
+
+           
+            listItem.appendChild(item);
+            listGroup.appendChild(listItem);
+            event.target.parentNode.parentNode.append(listGroup);
+
+           
+            item.addEventListener("click", (event) => this.#OnClick(event));
+            item.addEventListener("dblclick", (event) => this.#OnDblClick(event));
+            item.addEventListener("mousedown", (event) => this.#OnDown(event));
+
+
+
+
+            item.addEventListener("paste", function(even)  {
+                
+                
+                var $self = $(this);
+                setTimeout(function () {
+                    $self.html($self.text());
+                }, 0);
+
+                
+                
+            }, false);
+
+            item.addEventListener("keypress", (event) =>
+            {
+                if (event.which == 13)
+                {
+                    event.target.contentEditable = false;
+                }
+                return event.which != 13;
+                
+            });
+
+            item.addEventListener("blur", (event) =>
+            {
+                console.log("lost focus", true);
+                event.target.contentEditable = false;
+            }, true);
+
+            
+
+
+
+          
+
+
+        }
 
 
     }
 
 
 
-    new TreeHandler("menuDivId");
+    new TreeHandler("menuDivId", "contentDivId", "thrashCanId");
 
 
 
@@ -438,8 +711,8 @@
 
 
 
-    
-    
+
+
 
 
 
