--- a/LMSGroupOne/Views/Home/IndexTeacher.cshtml
+++ b/LMSGroupOne/Views/Home/IndexTeacher.cshtml
@@ -3,5 +3,5 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome Student</h1>
+    <h1 class="display-4">Welcome Teacher</h1>
 </div>
