--- a/LMSGroupOne/Views/Shared/_Layout.cshtml
+++ b/LMSGroupOne/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                     </ul>
                     <partial name="_LoginPartial" />
@@ -36,9 +36,9 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-dark">
         <div class="container-fluid bg-primary">
-            &copy; 2021 - LMSGroupOne - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2021 - LMSGroupOne
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
