create course client validation

--- a/LMSGroupOne/Views/Course/CreateCourse.cshtml
+++ b/LMSGroupOne/Views/Course/CreateCourse.cshtml
@@ -1,4 +1,4 @@
-﻿@model LMS.Core.Models.ViewModels.Course.CreateCourseViewModel
+﻿@model CreateCourseViewModel
 
 @{
     ViewData["Title"] = "CreateCourse";
