--- a/LMSGroupOne/Views/Shared/_Layout.cshtml
+++ b/LMSGroupOne/Views/Shared/_Layout.cshtml
@@ -11,10 +11,13 @@
     <header>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-6 bg-primary">
-                    <a asp-area="" asp-controller="Home" asp-action="Index" class="LMSGroupOne">LMS Group One</a>
+                <div class="col-4 bg-primary">
+                    <a asp-area="" asp-controller="Home" asp-action="Index" class="LMSGroupOne">LMS Group One</a>                    
                 </div>
-                <div class="col-6 bg-primary navbar-collapse collapse d-sm-inline-flex justify-content-end">
+                <div class="col-4 bg-primary">
+                    <a class="nav-link text-dark" asp-area="" asp-controller="MainNavigation" asp-action="Index">MainNav(TestLink)</a>
+                </div>
+                <div class="col-4 bg-primary navbar-collapse collapse d-sm-inline-flex justify-content-end">
                     <partial name="_LoginPartial" />
                 </div>
             </div>
