--- a/LMSGroupOne/Views/Course/Edit.cshtml
+++ b/LMSGroupOne/Views/Course/Edit.cshtml
@@ -1,17 +1,18 @@
-﻿@model CreateCourseViewModel
+﻿@model CourseEditViewModel
 
 @{
-    ViewData["Title"] = "CreateCourse";
+    ViewData["Title"] = "CourseEdit";
 }
 
-<h1>CreateCourse</h1>
+<h1>CourseEdit</h1>
 
 <h4>Course</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="CreateCourse">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -33,7 +34,7 @@
                 <span asp-validation-for="EndDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
