--- a/LMSGroupOne/Views/MainNavigation/Course.cshtml
+++ b/LMSGroupOne/Views/MainNavigation/Course.cshtml
@@ -1,11 +1,3 @@
 ﻿@using LMSGroupOne.Models.MainNavigation
-@model CourseModelView
-
-<div class="container-fluid text-center">
-    <h4 class="pt-3 pb-3">Course:</h4>
-    <h1 class="pt-1 pb-5">@Model.Name</h1>
-    <h4>Starts @Model.StartDate</h4>
-    <h4>Ends @Model.EndDate</h4>
-
-    <p class="pt-5">@Model.Description<p>
-</div>
+@model PlaceholderModelView
+placeholder view for course with id @Model.Id
