--- a/LMSGroupOne/Views/MainNavigation/Course.cshtml
+++ b/LMSGroupOne/Views/MainNavigation/Course.cshtml
@@ -1,3 +1,14 @@
 ﻿@using LMSGroupOne.Models.MainNavigation
-@model PlaceholderModelView
-placeholder view for course with id @Model.Id
+@model CourseModelView
+
+<div class="container-fluid text-center">
+    <h2>Course:</h2>
+    <H1>@Model.Name</h1>
+    <h4>Starts: @Model.StartDate</h4>
+    <h4>Ends: @Model.EndDate</h4>
+    <p>@Model.Description</p>
+
+
+
+
+</div>
