--- a/LMSGroupOne/Views/MainNavigation/_TreeViewPartial.cshtml
+++ b/LMSGroupOne/Views/MainNavigation/_TreeViewPartial.cshtml
@@ -19,7 +19,7 @@
 
 
 
-<div id="menuDivId" style="background-color:aqua;">
+<div id="menuDivId" style="padding: 0px; border: 0px; background-color: aqua; overflow-y: scroll; overflow-x:auto; ">
     <div>
         <i id="trashCanId" class="fa fa-trash-alt" data-item-type="@NodeType.trash" style="font-size:48px;color:black; padding:4px;"></i>
 
@@ -40,7 +40,9 @@
 
 <script>
 
-    
+
+
+   
 
 
 
