--- a/LMSGroupOne/Views/Shared/_Layout.cshtml
+++ b/LMSGroupOne/Views/Shared/_Layout.cshtml
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
-<body>
-    <header>
+<body class="container-fluid m-0 p-0">
+    <header id="headerBarId" class="container-fluid m-0 p-0">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-4 bg-primary">
@@ -23,14 +23,14 @@
             </div>
         </div>
     </header>
-    <div class="container-fluid">
-        <main role="main" class="pb-3">
+    <div class="container-fluid m-0 p-0">
+        <main role="main">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-dark">
-        <div class="container-fluid bg-primary">
+    <footer id="footerBarId" class="border-top footer text-dark p-0 m-0">
+        <div class="container-fluid p-0 m-0 bg-primary">
             &copy; 2021 - LMSGroupOne
         </div>
     </footer>
