--- a/LMSGroupOne/Views/Activity/Edit.cshtml
+++ b/LMSGroupOne/Views/Activity/Edit.cshtml
@@ -24,12 +24,12 @@
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ActivityTypeId" class="control-label"></label>
+                <label asp-for="ActivityTypeId" class="control-label">Activity Types</label>
                 <select asp-for="ActivityTypeId" class="form-control" asp-items="@(new SelectList(ViewBag.activityTypes,"Id","Name"))"></select>
                 <span asp-validation-for="ActivityTypeId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="ModuleId" class="control-label"></label>
+                <label asp-for="ModuleId" class="control-label">Modules</label>
                 <select asp-for="ModuleId" class="form-control" asp-items="@(new SelectList(ViewBag.modules,"Id","Name"))"></select>
                 <span asp-validation-for="ModuleId" class="text-danger"></span>
             </div>
