--- a/LMSGroupOne/Views/_ViewImports.cshtml
+++ b/LMSGroupOne/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using LMSGroupOne
 @using LMSGroupOne.Models
-@using LMS.Core.Models.Entities 
+@using LMS.Core.Models.Entities
 @using LMS.Core.Models.ViewModels.Course
+@using LMS.Core.Models.ViewModels.Document
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
