Removed ExternalLogins and the e-mail confirmation process from HomeController, viewmodel and view

--- a/LMSGroupOne/Views/Home/CreateAccount.cshtml
+++ b/LMSGroupOne/Views/Home/CreateAccount.cshtml
@@ -10,7 +10,7 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="CreateAccount" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+        <form asp-action="CreateAccount">
             <h4>Create account</h4>
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
