--- a/LMSGroupOne/Views/MainNavigation/TeacherStudent.cshtml
+++ b/LMSGroupOne/Views/MainNavigation/TeacherStudent.cshtml
@@ -1,10 +1,11 @@
-﻿@*a student view by a teacher*@
+﻿
+@*a teacher view by a student*@
 
 @using LMSGroupOne.Models.MainNavigation
-@model StudentFromTeacherModelView
+@model TeacherFromStudentModelView
 
 <div class="container-fluid text-center">
-    <h2>Student:(teachers view)</h2>
+    <h2>Teacher:(students view)</h2>
     <H1>@Model.Name</H1>
     <H2>Email: @Model.Email</H2>
 
