--- a/LMSGroupOne/Views/MainNavigation/TeacherTeacher.cshtml
+++ b/LMSGroupOne/Views/MainNavigation/TeacherTeacher.cshtml
@@ -1,10 +1,10 @@
-﻿@*a student view by a teacher*@
+﻿@*a teacher view by a teacher*@
 
 @using LMSGroupOne.Models.MainNavigation
-@model StudentFromTeacherModelView
+@model TeacherFromTeacherModelView
 
 <div class="container-fluid text-center">
-    <h2>Student:(teachers view)</h2>
+    <h2>Teacher:(teachers view)</h2>
     <H1>@Model.Name</H1>
     <H2>Email: @Model.Email</H2>
 
