--- a/LMSGroupOne/Views/MainNavigation/_TreeViewPartial.cshtml
+++ b/LMSGroupOne/Views/MainNavigation/_TreeViewPartial.cshtml
@@ -19,16 +19,17 @@
 
 
 
-<div id="menuDivId" style="padding: 0px; border: 0px; background-color: aqua; overflow-y: scroll; overflow-x:auto; ">
-    <div>
+<div id="menuDivId" style="padding: 0px; border: 0px; background-color: none; overflow-y: scroll; overflow-x:auto; position:absolute; width:100%;">
+    <div id="toolBarId">
         <i id="trashCanId" class="fa fa-trash-alt" data-item-type="@NodeType.trash" style="font-size:48px;color:black; padding:4px;"></i>
 
     </div>
     
-    <script>
-            TreeFactory.GenerateTree(@(Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model))), @(Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model))));
-    </script>
-
+    <div id="treeDivId">
+        <script>
+                TreeFactory.GenerateTree(@(Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model))), @(Html.Raw(Newtonsoft.Json.JsonConvert.SerializeObject(Model))));
+        </script>
+    </div>
 
     
 
@@ -103,10 +104,11 @@
             // the selection
             this.#selectBar = document.createElement("div");
             this.#selectSelection = document.createElement("div");
-            this.#menuDiv.prepend(this.#selectBar);
-            this.#menuDiv.prepend(this.#selectSelection);
-            this.#selectBar.style = "top:-4096px; left:0px; width:100%; height:32px; position:absolute; background-color:#ffff0055;";
-            this.#selectSelection.style ="top:-4096px;left:0px;width:100%;height:32px;position:absolute;background-color:#ff000033;";
+            let tempdoc = document.getElementById("treeDivId");
+            tempdoc.appendChild(this.#selectBar);
+            tempdoc.appendChild(this.#selectSelection);
+            this.#selectBar.style = "top:-4096px; left:0px; width:100%; height:32px; position:absolute; background-color:#ffff0055; z-index: -1;";
+            this.#selectSelection.style ="top:-4096px;left:0px;width:100%;height:32px;position:absolute;background-color:#ff000033; z-index: -1;";
 
             // the draggable element
             this.#dragElement = document.createElement("nobr");
@@ -222,12 +224,6 @@
 
 
 
-
-
-
-
-
-
             if (event.target.dataset.itemExtra == "caret")
             {
 
@@ -240,29 +236,6 @@
 
             if (event.target.dataset.itemExtra == "text")
             {
-                // new current
-                if (this.#currentElement == event.target.parentNode)
-                {
-                    this.#editCancel = false;
-                    this.#editTimer = window.setTimeout(() =>
-                    {
-                        if (!this.#editCancel)
-                        {
-
-                            event.target.contentEditable = true;
-                            event.target.focus();
-                        }
-
-                    }, 500);
-
-
-
-
-
-                    //this.#currentElement = event.target.parentNode;
-                }
-
-
                 this.#SelectionOutline(event.target.parentNode);
                 return;
             }
@@ -294,51 +267,69 @@
         }
 
 
-        #ToggleExpand(node)
-        {
-            let children = node.parentNode.childNodes;
-            children.forEach(s => { s.hidden = !s.hidden; });
-            node.hidden = false;
-
-
-
-
-            let carret = node.childNodes[1];
-            if (carret.classList.contains("carretIcon"))
+        #ToggleExpand(node) {            
+            
+            if (node.parentNode.childNodes[1].childElementCount)
             {
-                carret.classList.toggle("fa-caret-right");
-                carret.classList.toggle("fa-caret-down");
+                if (node.dataset.itemOpen == "true")
+                {
+                    this.#CloseNode(node);
+                }
+                else
+                {
+                    this.#OpenNode(node);
+                }
             }
-
-            let icon = node.childNodes[3];
-            if (icon.classList.contains("folderIcon"))
-            {
-                icon.classList.toggle("fa-folder");
-                icon.classList.toggle("fa-folder-open");
-            }
-
-            console.log(icon.classList);
-
-
-
-            console.log("number of children " + node.parentNode.childElementCount);
-            if (node.parentNode.childElementCount <= 1)
-            {
-                children.forEach(s => { s.hidden = true; });
-                node.hidden = false;
-                carret.hidden = true;
-                icon.classList.add("fa-folder");
-                icon.classList.remove("fa-folder-open");
-
-            }
-
-
-
-
+                       
         }
+
+        #OpenNode(node)
+        {
+            node.dataset.itemOpen = true;
+            node.nextSibling.hidden = false;
+                        
+            let item = TreeFactory.GetIconClass(parseInt(node.childNodes[1].dataset.itemType), true);
+            let icon = node.childNodes[1];
+            icon.classList = item.classList;
+            icon.style = item.style;
+
+            let caret = node.childNodes[0];
+            if (caret.classList.contains("carretIcon"))
+            {
+                caret.classList.remove("fa-caret-right");
+                caret.classList.add("fa-caret-down");
+            }
+        }
+        #CloseNode(node)
+        {
+            node.dataset.itemOpen = false;
+            node.nextSibling.hidden = true;
+
+            let item = TreeFactory.GetIconClass(parseInt(node.childNodes[1].dataset.itemType), false);
+            let icon = node.childNodes[1];
+            icon.classList = item.classList;
+            icon.style = item.style;
+
+            
+            let caret = node.childNodes[0];
+            if (caret.classList.contains("carretIcon"))
+            {
+                caret.classList.add("fa-caret-right");
+                caret.classList.remove("fa-caret-down");
+            }
+
+
+
+            
+        }
+                
 
         #SelectionOutline(node)
         {
+            let tRect = document.getElementById("toolBarId").getBoundingClientRect();
+            let tOffset = tRect.height;
+
+
             // new current
             if (this.#currentElement != node)
             {
@@ -353,10 +344,10 @@
 
             let marginal = rect.top - rect2.top;
 
-            this.#selectBar.style.top = (rect.top - mr.top) + "px";
+            this.#selectBar.style.top = (rect.top - mr.top)+tOffset + "px";
             this.#selectBar.style.height = (rect.height) + "px";
 
-            this.#selectSelection.style.top = (rect.top - mr.top) + "px";
+            this.#selectSelection.style.top = (rect.top - mr.top) + tOffset + "px";
             this.#selectSelection.style.height = (rect2.height - marginal * 2) + "px";
         }
 
@@ -424,28 +415,28 @@
             element.remove();
 
 
-            if (pNode.childElementCount <= 1)
-            {
-                this.#ToggleExpand(pNode.childNodes[1])
-            }
+            //if (pNode.childElementCount <= 1)
+            //{
+            //    this.#ToggleExpand(pNode.childNodes[1])
+            //}
 
 
 
             // selections todo refactor
-            let rect = pNode.childNodes[1].getBoundingClientRect();
-            let rect2 = pNode.parentNode.childNodes[1].getBoundingClientRect();
-            let mr = this.#menuDiv.getBoundingClientRect();
+            //let rect = pNode.childNodes[1].getBoundingClientRect();
+            //let rect2 = pNode.parentNode.childNodes[1].getBoundingClientRect();
+            //let mr = this.#menuDiv.getBoundingClientRect();
 
-            let marginal = rect.top - rect2.top;
+            //let marginal = rect.top - rect2.top;
 
-            this.#selectBar.style.top = (rect.top - mr.top) + "px";
-            this.#selectBar.style.height = (rect.height) + "px";
+            //this.#selectBar.style.top = (rect.top - mr.top) + "px";
+            //this.#selectBar.style.height = (rect.height) + "px";
 
-            this.#selectSelection.style.top = (rect.top - mr.top) + "px";
-            this.#selectSelection.style.height = (rect2.height - marginal * 2) + "px";
+            //this.#selectSelection.style.top = (rect.top - mr.top) + "px";
+            //this.#selectSelection.style.height = (rect2.height - marginal * 2) + "px";
 
 
-
+            this.#SelectionOutline(pNode.parentNode.childNodes[0]);
 
 
         }
@@ -470,7 +461,7 @@
                     {
 
                         // todo add element
-                        this.#AddElement(event, obj.id, obj.type, obj.parentId, obj.parentType, obj.name);
+                        this.AddElement(event, obj.id, obj.type, obj.parentId, obj.parentType, obj.name);
                     }
                     //string parentId, string parentType
 
@@ -478,76 +469,89 @@
             });
         }
 
-        #AddElement(event, id, type, parentId, parentType, name)
+        AddElement(event, id, type, parentId, parentType, name)
         {
+           
+            let elmer=this.#FindListGroup(type, parentId);
+            
             let listGroup = document.createElement("ul");
             listGroup.classList = "list-group";
-
 
             let listItem = document.createElement("li");
             listItem.classList = "list-group-item";
             listItem.style = "background:none;";
 
-
-            let item = TreeFactory.GenerateItem(id, type, parentId, parentType, name);
+            let item = TreeFactory.GenerateItem(id, parseInt(type), parentId, parentType, name, false, TreeFactory.NodeTypes.NONE, false, false, false);
             
-
            
             listItem.appendChild(item);
-            listGroup.appendChild(listItem);
-            event.target.parentNode.parentNode.append(listGroup);
-
+            listGroup.appendChild(listItem);            
+            elmer.appendChild(listGroup);
            
             item.addEventListener("click", (event) => this.#OnClick(event));
             item.addEventListener("dblclick", (event) => this.#OnDblClick(event));
             item.addEventListener("mousedown", (event) => this.#OnDown(event));
 
-
-
-
-            item.addEventListener("paste", function(even)  {
-                
-                
-                var $self = $(this);
-                setTimeout(function () {
-                    $self.html($self.text());
-                }, 0);
-
-                
-                
-            }, false);
-
-            item.addEventListener("keypress", (event) =>
-            {
-                if (event.which == 13)
-                {
-                    event.target.contentEditable = false;
-                }
-                return event.which != 13;
-                
-            });
-
-            item.addEventListener("blur", (event) =>
-            {
-                console.log("lost focus", true);
-                event.target.contentEditable = false;
-            }, true);
-
-            
-
-
-
-          
-
+            //todo update selection 
 
         }
+
+        // finds the place to put created items in
+        #FindListGroup(type, parentId)
+        {
+            
+            let elmer = document.getElementById(parentId);
+            
+
+            let children = elmer.parentNode.nextSibling.childNodes;
+
+            for (let i = 0; i < children.length; i++) {
+
+                if (children[i].firstChild.firstChild.firstChild.dataset.itemCreates == type) {
+
+                    return children[i].firstChild.firstChild.nextSibling;
+                }
+
+            }
+
+        }
+
+
+
+        //#FindElement(id, type)
+        //{
+        //    let root = document.getElementById("root").parentNode;
+        //    let children = root.nextSibling.childNodes;
+
+        //    console.log(root);
+
+        //    for (let i = 0; i < children.length; i++)
+        //    {
+        //    //children.forEach(c => {
+
+        //        let retval = this.#FindRecursion(children[i].firstChild.firstChild, id, type);
+        //        console.log(retval);
+        //        if (retval != null)
+        //        {
+        //            return retval;
+                    
+        //        }
+                
+        //    }
+        //    return null;
+
+        //}
+
+        
+
+        
 
 
     }
 
 
 
-    new TreeHandler("menuDivId", "contentDivId", "thrashCanId");
+    new TreeHandler("treeDivId", "contentDivId", "thrashCanId");
 
 
 
