--- a/LMSGroupOne/Views/Shared/_Layout.cshtml
+++ b/LMSGroupOne/Views/Shared/_Layout.cshtml
@@ -29,8 +29,8 @@
                                 Course
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="course" asp-action="createcourse">Create New</a>
-                                <a class="nav-link text-dark" asp-area="" asp-controller="course" asp-action="editcourse" asp-route-id="1">Edit Id1</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="course" asp-action="create">Create New</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="course" asp-action="edit" asp-route-id="1">Edit Id1</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="#">List</a>
                             </div>
