Removed redundant password and updated test menu dropdown alternative Edit id

--- a/LMSGroupOne/Views/Shared/_Layout.cshtml
+++ b/LMSGroupOne/Views/Shared/_Layout.cshtml
@@ -70,6 +70,7 @@
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <a class="nav-link text-dark" asp-area="" asp-controller="home" asp-action="createaccount">Create New</a>
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="home" asp-action="editaccount" asp-route-id="165284a4-82e8-47c9-902c-7afeab45c459">Edit Id 165284a4-82e8-47c9-902c-7afeab45c459</a>
                                     <div class="dropdown-divider"></div>
                                     <a class="dropdown-item" href="#">List</a>
                                 </div>
